--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>MemeGenerator</title>
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
+  <link rel="stylesheet" href="/normalize.css">
+  <link rel="stylesheet" href="/style.css">
+  <link href="//fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
 </head>
 <body>
   <header>
